// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <div
    className="page-header big-spacer-bottom"
  >
    <h1
      className="page-title"
    >
      onboarding.tutorial.with.azure_pipelines.title
    </h1>
  </div>
  <Step
    finished={false}
    key="0"
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    stepNumber={1}
    stepTitle="onboarding.tutorial.with.azure_pipelines.ExtensionInstallation.title"
  />
  <Step
    finished={false}
    key="1"
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={2}
    stepTitle="onboarding.tutorial.with.azure_pipelines.ServiceEndpoint.title"
  />
  <Step
    finished={false}
    key="2"
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={3}
    stepTitle="onboarding.tutorial.with.azure_pipelines.BranchAnalysis.title"
  />
  <AllSetStep
    alm="azure"
    open={false}
    stepNumber={4}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly 2`] = `
<div
  className="boxed-group onboarding-step is-open"
>
  <div
    className="onboarding-step-number"
  >
    1
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.tutorial.with.azure_pipelines.ExtensionInstallation.title
    </h2>
  </div>
  <div
    className=""
  >
    <div
      className="boxed-group-inner"
    >
      <div>
        <ExtensionInstallationStepContent />
      </div>
      <Button
        className="big-spacer-top spacer-bottom"
        onClick={[Function]}
      >
        continue
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly 3`] = `
<div
  className="boxed-group onboarding-step"
>
  <div
    className="onboarding-step-number"
  >
    2
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.tutorial.with.azure_pipelines.ServiceEndpoint.title
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  />
  <div
    className="hidden"
  >
    <div
      className="boxed-group-inner"
    >
      <div>
        <ServiceEndpointStepContent
          baseUrl="http://localhost:9000"
          component={
            Object {
              "breadcrumbs": Array [],
              "key": "my-project",
              "name": "MyProject",
              "qualifier": "TRK",
              "qualityGate": Object {
                "isDefault": true,
                "key": "30",
                "name": "Sonar way",
              },
              "qualityProfiles": Array [
                Object {
                  "deleted": false,
                  "key": "my-qp",
                  "language": "ts",
                  "name": "Sonar way",
                },
              ],
              "tags": Array [],
            }
          }
          currentUser={
            Object {
              "groups": Array [],
              "isLoggedIn": true,
              "login": "luke",
              "name": "Skywalker",
              "scmAccounts": Array [],
            }
          }
        />
      </div>
      <Button
        className="big-spacer-top spacer-bottom"
        onClick={[Function]}
      >
        continue
      </Button>
    </div>
  </div>
</div>
`;

exports[`should render correctly 4`] = `
<div
  className="boxed-group onboarding-step"
>
  <div
    className="onboarding-step-number"
  >
    3
  </div>
  <div
    className="boxed-group-header"
  >
    <h2>
      onboarding.tutorial.with.azure_pipelines.BranchAnalysis.title
    </h2>
  </div>
  <div
    className="boxed-group-inner"
  />
  <div
    className="hidden"
  >
    <div
      className="boxed-group-inner"
    >
      <div>
        <withLanguagesContext(BranchAnalysisStepContent)
          component={
            Object {
              "breadcrumbs": Array [],
              "key": "my-project",
              "name": "MyProject",
              "qualifier": "TRK",
              "qualityGate": Object {
                "isDefault": true,
                "key": "30",
                "name": "Sonar way",
              },
              "qualityProfiles": Array [
                Object {
                  "deleted": false,
                  "key": "my-qp",
                  "language": "ts",
                  "name": "Sonar way",
                },
              ],
              "tags": Array [],
            }
          }
          onStepValidationChange={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;
